CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)

SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" "${CMAKE_MODULE_PATH}")

FIND_PACKAGE(Torch REQUIRED)
ADD_SUBDIRECTORY(lib)

INCLUDE_DIRECTORIES(BEFORE "${LUA_INCDIR}")
INCLUDE_DIRECTORIES(BEFORE "${CMAKE_CURRENT_SOURCE_DIR}/lib/THZ")
INCLUDE_DIRECTORIES(BEFORE "${CMAKE_CURRENT_BINARY_DIR}/lib/THZ")
INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/generic")

SET(src "")
SET(luasrc init.lua env.lua THZ.lua Tensor.lua Storage.lua complex.lua display.lua fcomplex.lua test.lua)

ADD_TORCH_PACKAGE(ztorch "${src}" "${luasrc}")
